--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -13,3 +13,4 @@ David Larlet for suggesting several improvements
 Xavier Barbosa for improving QuerySet handling and providing Template URI code
 Michael Richardson for contributing an improvement to form validation handling
 Brian McMurray for contributing a patch for #41
+James Emerton for making the OAuth parts more usable/friendly
