--- a/pyston/locale/cs/LC_MESSAGES/django.po
+++ b/pyston/locale/cs/LC_MESSAGES/django.po
@@ -22,9 +22,9 @@ msgstr ""
 msgid "This field is required"
 msgstr "Toto pole je povinné"
 
-#: data_processor.py:109
-msgid "Unsupported file type"
-msgstr "Nepodporovaný typ souboru"
+#: data_processor.py:101
+msgid "Invalid file name"
+msgstr "Neplatný název souboru"
 
 #: data_processor.py:116
 msgid "File content is not in base64 format"
